Fix dark mode header styling

--- a/style.css
+++ b/style.css
@@ -37,7 +37,9 @@ h1, h2, h3 {
     color: #2D882D;
 }
 
-body.dark-mode h1, h2, h3 {
+body.dark-mode h1,
+body.dark-mode h2,
+body.dark-mode h3 {
     color: #116611;
 }
 
